<resources>
    <string name="app_name">InterestingFacts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_name">Interesting Facts</string>
    <string name="yournamedesc">Your Name Image used on the background</string>
    <string name="tile_name_desc">This is the tile name. What a surprise.</string>
    <string name="Button">Button Used To Change Facts</string>
    <string name="LoremIpsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
</resources>
